browser/components/aboutlogins/content/components/login-item.css
:host {
  padding: 40px;

  --reveal-checkbox-opacity: .8;
  --reveal-checkbox-opacity-hover: .6;
  --reveal-checkbox-opacity-active: 1;
  --success-color: #00c100;
}

:host([data-editing]) .edit-button,
:host([data-editing]) .copy-button,
:host([data-editing]) .open-site-button,
:host([data-is-new-login]) .delete-button,
:host([data-is-new-login]) .origin-saved-value,
:host([data-is-new-login]) .meta-info,
:host([data-is-new-login]) .login-item-title,
:host(:not([data-is-new-login])) .new-login-title,
:host(:not([data-editing])) .form-actions-row {
  display: none;
}

input[type="password"][readOnly],
input[type="text"][readOnly],
input[type="url"][readOnly] {
  all: unset;
  font-size: 1.1em;
  display: inline-block;
  width: -moz-available;
  background-color: transparent !important; 
}

.detail-cell input:not([type="checkbox"]),
.save-changes-button {
  margin-inline-start: 0; 
}

.header {
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--in-content-box-border-color);
  margin-bottom: 40px;
}

.title {
  margin-top: 0;
  margin-bottom: 0;
  flex-grow: 1;
  overflow: hidden;
  text-overflow: ellipsis;
}

.delete-button,
.edit-button {
  background-repeat: no-repeat;
  background-position: 8px;
  -moz-context-properties: fill;
  fill: currentColor;
  min-width: auto;
}

.delete-button:dir(rtl),
.edit-button:dir(rtl) {
  background-position-x: right 8px;
}

.delete-button {
  background-image: url("chrome://browser/content/aboutlogins/icons/delete.svg");
  padding-inline-start: 30px; 
}

.edit-button {
  background-image: url("chrome://browser/content/aboutlogins/icons/edit.svg");
  padding-inline-start: 32px; 
}

input[type="url"][readOnly] {
  color: var(--in-content-link-color) !important;
  cursor: pointer;
}

input[type="url"][readOnly]:hover {
  color: var(--in-content-link-color-hover) !important;
  text-decoration: underline;
}

input[type="url"][readOnly]:hover:active {
  color: var(--in-content-link-color-active) !important;
}

.reveal-password-wrapper {
  display: flex;
  align-items: center;
}

.detail-row {
  display: flex;
  align-items: end;
}

.detail-row,
.form-actions-row {
  margin-bottom: 40px;
}

.detail-cell {
  flex-grow: 1;
}

.field-label {
  display: block;
  font-size: smaller;
  color: var(--in-content-deemphasized-text);
  margin-bottom: 5px;
}

:host([data-editing]) .detail-cell input:not([type="checkbox"]) {
  width: 280px;
}

.copy-button:not([data-copied]) .copied-button-text,
.copy-button[data-copied] .copy-button-text {
  display: none;
}

.copy-button[data-copied] {
  color: var(--success-color) !important; 
  background-color: transparent;
  opacity: 1; 
}

.copy-button[data-copied]:-moz-focusring {
  outline-width: 0;
  box-shadow: none;
}

.copied-button-text {
  background-image: url(chrome://global/skin/icons/check.svg);
  background-repeat: no-repeat;
  -moz-context-properties: fill;
  fill: currentColor;
  padding-inline-start: 22px;
}

.meta-info {
  font-size: smaller;
  color: var(--in-content-deemphasized-text);
}

.meta-info:first-of-type::before {
  content: "";
  display: block;
  margin-bottom: 20px;
  border-top: 1px solid var(--in-content-box-border-color);
  width: 40px;
}

:host(:not([editing])) input[name='password'] {
  font-family: monospace;
}

.reveal-password-checkbox {
  
  background-color: transparent !important;
  border-width: 0 !important;
  background-image: url("chrome://browser/content/aboutlogins/icons/show-password.svg") !important;
  margin-inline-start: 8px !important;
  cursor: pointer;
  -moz-context-properties: fill;
  fill: currentColor !important;
  opacity: var(--reveal-checkbox-opacity);
}

.reveal-password-checkbox:hover {
  opacity: var(--reveal-checkbox-opacity-hover);
}

.reveal-password-checkbox:hover:active {
  opacity: var(--reveal-checkbox-opacity-active);
}

.reveal-password-checkbox:checked {
  background-image: url("chrome://browser/content/aboutlogins/icons/hide-password.svg") !important;
}

.reveal-password-checkbox:-moz-focusring {
  outline: 2px solid var(--in-content-border-active);
  
  outline-offset: -1px;
  

  -moz-outline-radius: 3px;
  box-shadow: 0 0 0 4px var(--in-content-border-active-shadow);
}

.login-item-favicon {
  width: 24px;
}

.login-item-favicon-wrapper {
  margin-inline-end: 12px;
  height: 24px;
  width: 24px;
  flex-shrink: 0;
  background-image: url("chrome://mozapps/skin/places/defaultFavicon.svg");
  background-repeat: no-repeat;
  background-size: contain;
  -moz-context-properties: fill;
}

.login-item-favicon-wrapper.hide-default-favicon {
  background-image: none;
}

.breach-alert {
  border-radius: 8px;
  border: 1px solid var(--in-content-border-color);
  background-color: var(--yellow-10);
  background-image: url("chrome://global/skin/icons/warning.svg");
  background-repeat: no-repeat;
  background-position: left 10px top 10px;
  -moz-context-properties: fill;
  fill: var(--red-90);
  box-shadow: 0 2px 8px 0 rgba(12,12,13,0.1);
  font-size: .9em;
  font-weight: 300;
  line-height: 1.4;
  padding-block: 12px;
  padding-inline-start: 36px;
  padding-inline-end: 92px;
  margin-block-end: 40px;
  position: relative;
}

.breach-alert:dir(rtl) {
  background-position: right 10px top 10px;
}

a.breach-alert-link {
  color: inherit;
  text-decoration: underline;
  font-weight: 500;
}

.dismiss-breach-alert {
  border: none;
  padding: 0;
  margin: 0;
  position: absolute;
  background-image: url("chrome://global/skin/icons/close.svg");
  background-repeat: no-repeat;
  background-size: contain;
  min-height: 16px;
  min-width: 16px;
  -moz-context-properties: fill, fill-opacity;
  fill-opacity: 0;
  fill: var(--grey-90);
  inset-inline-end: 12px;
  inset-block-start: 12px
}

.dismiss-breach-alert,
.dismiss-breach-alert:hover {
  background-color: transparent;
}

@supports -moz-bool-pref("browser.in-content.dark-mode") {
  @media (prefers-color-scheme: dark) {
    :host {
      --reveal-checkbox-opacity: .8;
      --reveal-checkbox-opacity-hover: 1;
      --reveal-checkbox-opacity-active: .6;
      --success-color: #86DE74;
    }

    .breach-alert {
      box-shadow: 0 2px 8px 0 rgba(249,249,250,0.1);
      color: #0C0C0D;
    }

    .login-item-favicon-wrapper {
      fill: var(--in-content-border-hover);
    }
  }
}

