Bug 1570947 - Properly overflow long passwords in about:logins. r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D42972

UltraBlame original commit: d66eea07487a361163fd0a49e4b965e2ec729219

--- a/browser/components/aboutlogins/content/components/login-item.css
+++ b/browser/components/aboutlogins/content/components/login-item.css
@@ -31,6 +31,8 @@ input[type="url"][readOnly] {
   display: inline-block;
   width: -moz-available;
   background-color: transparent !important; 
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .detail-cell input:not([type="checkbox"]),
@@ -108,6 +110,7 @@ input[type="url"][readOnly]:hover:active {
 
 .detail-cell {
   flex-grow: 1;
+  min-width: 0; 
 }
 
 .field-label {
@@ -172,6 +175,7 @@ input[type="url"][readOnly]:hover:active {
   -moz-context-properties: fill;
   fill: currentColor !important;
   opacity: var(--reveal-checkbox-opacity);
+  flex-shrink: 0;
 }
 
 .reveal-password-checkbox:hover {
